# go-circle

./: .gitignore  .mailmap  AUTHORS.txt  BUILD.bazel  CHANGELOG.md  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  build_statistics.go  circle.go  circle.yml  circle_test.go  token.go  types.go
builds/: BUILD.bazel  build.go
circle/: BUILD.bazel  main.go
wait/: BUILD.bazel  wait.go  wait_test.go
