load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kevinburke/go-circle/circle",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//wait:go_default_library",
        "@com_github_kevinburke_go_git//:go_default_library",
        "@com_github_skratchdot_open_golang//open:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_binary(
    name = "circle",
    importpath = "github.com/kevinburke/go-circle/circle",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
