load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["wait.go"],
    importpath = "github.com/kevinburke/go-circle/wait",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_kevinburke_bigtext//:go_default_library",
        "@com_github_kevinburke_go_git//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["wait_test.go"],
    importpath = "github.com/kevinburke/go-circle/wait",
    library = ":go_default_library",
)
